--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ main {
   background-color: #fff;
   border-radius: 10px;
   width: 320px;
-  height: 480px;
+  height: 500px;
   padding: 20px;
   display: flex;
   gap: 10px;
@@ -270,7 +270,7 @@ h5 {
   background-color: #fff;
   border-radius: 10px;
   width: 460px;
-  height: 460px;
+  height: 500px;
   padding: 20px;
   display: flex;
   gap: 10px;
@@ -337,4 +337,77 @@ footer p {
   text-align: center;
   color: white;
   margin: 4px 0;
+}
+
+#result {
+  color: #000;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+}
+
+#snackbar {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  min-width: 250px; /* Set a default minimum width */
+  margin-left: -125px; /* Divide value of min-width by 2 */
+  background-color: green; /* Black background color */
+  color: #fff; /* White text color */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  z-index: 1; /* Add a z-index if needed */
+  left: 50%; /* Center the snackbar */
+  bottom: 30px; /* 30px from the bottom */
+  font-family: "Inter", sans-serif;
+  border-radius: 4px;
+}
+
+#snackbar.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
+
+@keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
 }
