--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   padding: 0;
 }
 
+button {
+  cursor: pointer;
+}
+
 .white-font {
   color: white;
 }
@@ -316,9 +320,15 @@ h5 {
   margin: 10px 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 footer {
   background-color: #2d2d4e;
   padding-bottom: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .footer-icon-text {
